--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
 </div>
 
-
+<div class= "differences">
         <h2>Differences</h2>
         <ul>
             <li><code>&lt;div&gt;</code>: <span class= "blue">block</span></li>
@@ -36,6 +36,7 @@
                 <li>used to change the style of something on a webpage without affecting the context it is within</li>
             </ul>
         </ul>
+        </div>
     </div>
 </body>
 
